syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.postchain.server.grpc";
option java_outer_classname = "SubnodeProto";

package postchain.rpc;

service SubnodeService {
  rpc InitNode (InitNodeRequest) returns (InitNodeReply) {} // Initialize postchain node
  rpc StartSubnodeBlockchain (StartSubnodeBlockchainRequest) returns (StartSubnodeBlockchainReply) {}
}

message InitNodeRequest {
  bytes privkey = 1;
}

message InitNodeReply {
  string message = 1;
}

message StartSubnodeBlockchainRequest {
  int64 chainId = 1;
  bytes brid = 2;
}

message StartSubnodeBlockchainReply {
  string message = 1;
}
